# dgiot

./: .gitignore  .gitignore~  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Platform-service.md  README-CN.md  README-JP.md  README-RU.md  README.md  Windows.md  baiduMap_upgrade.sh  build.sh  changelog.sh  dgiot.ipr  dgiot.rebar.config  dgiot_demo.sh  dgiot_edge.sh  dgiot_install.sh  dgiot_linux.ipr  dgiot_linux.iws  dgiot_server.ipr  dgiot_server.iws  dgiotlog.js  docker.mk  emqx.rebar.config  init.sh  logfile  mix.exs  package-lock.json  package.json  pkg-vsn.sh  post-compile.cmd  post-compile.sh  push.js  rebar.config  rebar.config.erl  rebar.config.script  rebar3  (+5 more)
.gitee/: PULL_REQUEST_TEMPLATE.zh-CN.md
.github/: PULL_REQUEST_TEMPLATE.md  weekly-digest.yml
.ssh/: id_rsa  id_rsa.pub  known_hosts  known_hosts.old
apps/: .gitignore  Makefile  README.md  rebar.config
apps/dgiot_dlink/priv/example/java/: BUILD.bazel  README.md  build.gradle  dlink_client.java  dlink_server.java  proto.md  settings.gradle
apps/dgiot_dlink/priv/example/java/src/main/java/io/grpc/dgiot/dlink/: DlinkClient.java  DlinkServer.java
apps/dgiot_dlink/priv/example/java/src/main/java/io/grpc/examples/dlink/: DlinkClient.java  DlinkServer.java  HealthCheckRequest.java
apps/dgiot_dlink/priv/example/java/src/main/proto/: dlink.proto
apps/dgiot_dlink/priv/example/java/src/main/resources/io/grpc/examples/hedging/: hedging_service_config.json
apps/dgiot_dlink/priv/example/java/src/main/resources/io/grpc/examples/retrying/: retrying_service_config.json
c/: makefile
data/: loaded_plugins.tmpl
docker/: Dockerfile  (+1 more)
(+3068 files in other folders)
