load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")

proto_library(
    name = "dlink_proto",
    srcs = ["src/main/proto/dlink.proto"],
)

java_proto_library(
    name = "dlink_java_proto",
    deps = [":dlink_proto"],
)

java_grpc_library(
    name = "dlink_java_grpc",
    srcs = [":dlink_proto"],
    deps = [":dlink_java_proto"],
)

java_library(
    name = "examples",
    testonly = 1,
    srcs = glob(
        ["src/main/java/**/*.java"],
    ),
    resources = glob(
        ["src/main/resources/**"],
    ),
    runtime_deps = [
        "@io_grpc_grpc_java//netty",
    ],
    deps = [
        ":helloworld_java_grpc",
        ":helloworld_java_proto",
        "@com_google_protobuf//:protobuf_java",
        "@com_google_protobuf//:protobuf_java_util",
        "@io_grpc_grpc_java//api",
        "@io_grpc_grpc_java//protobuf",
        "@io_grpc_grpc_java//stub",
        "@maven//:com_google_api_grpc_proto_google_common_protos",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_code_gson_gson",
        "@maven//:com_google_guava_guava",
    ],
)

java_binary(
    name = "dlinkclient",
    testonly = 1,
    main_class = "io.grpc.examples.dlink.DlinkClient",
    runtime_deps = [
        ":examples",
    ],
)

java_binary(
    name = "dlinkserver",
    testonly = 1,
    main_class = "io.grpc.examples.dlink.DlinkServer",
    runtime_deps = [
        ":examples",
    ],
)

